ready for host on heroku

--- a/templates/views/404error.hbs
+++ b/templates/views/404error.hbs
@@ -15,7 +15,7 @@
                         <!-- left side div  -->
                         <div class="col-md-6 col-12 main_header_left">
                             <figure>
-                                <img  src="img/404-4.jpg" alt="img" class="img-fluid" title="Amul Sharma">
+                                <img  src="img/404.png" alt="img" class="img-fluid" title="Error page">
                             </figure>
 
                         <p>Welcome to AKSARA Technical World</p>
