--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
                         <!-- left side div  -->
                         <div class="col-md-6 col-12 main_header_right">
                             <figure>
-                                <img src="./img/read.jpg" alt="img" class="img-fluid" title="Amul Sharma">
+                                <img src="./img/about.png" alt="img" class="img-fluid" title="Amul Sharma">
                             </figure>
                 </div>
                 <!-- right side div  -->
