--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,7 @@ body{
 }
 .main_header_right figure img {
     filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.3));
+    height: 45rem;
 } 
 /* error page image style */
 /* .errorimg{
