--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,10 +24,13 @@
                                 <img class="w-100" src="./img/read.jpg" alt="First slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./img/read.jpg" alt="Second slide">
+                                <img class="w-100" src="./img/bg1.png" alt="Second slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./img/read.jpg" alt="Third slide">
+                                <img class="w-100" src="./img/bg2.png" alt="Third slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="w-100" src="./img/bg3.png" alt="Fourth slide">
                               </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
