added Aboutme link

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -22,7 +22,7 @@
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to AKSARA Technical World</p>
                         <h1>I am a <span class="weatherText">Mern Stack Developer</span>, Blogger And A Freelancer</h1>
-                        <a href="https://www.linkedin.com/in/amul-sharma2000/"><button>About me</button></a>
+                        <a href="https://amulsharma.netlify.app/"><button>About me</button></a>
                     </div>
                 </div>
             </div>
