--- a/templates/partials/headerLink.hbs
+++ b/templates/partials/headerLink.hbs
@@ -2,6 +2,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="keywords" 
+      content="Weatherapp, Forecast, Download MCA mini project,mini project,Major project,MCA, Download Download MCA Major project, Amul Sharma, weather,git, github project, Project"
+    />
+     <meta
+      name="description"
+      content="The weather app also provides atmospheric pressure, weather conditions, visibility distance, relative humidity, precipitation in different unites, dew point, wind speed and direction, in addition to ten days in future and hourly weather forecast."
+      />
+      <meta name="description" content="A weather app which can help you to Plan your outdoor activty according to the weather, you can prepare your self to see the forcast.
+      Visite to the Website and see the weather forcast info.">
+      <meta name="description" content="A weather app which show you the weather detail across the world by entering your city it will help you to make your outdoor activity safe from the weather causes.">
+      <meta name="identifier-URL" content="https://weather-temp-app.cyclic.app" />
+     <link rel="canonical" href="https://weather-temp-app.cyclic.app" />
+      <link
+      rel="alternate"
+      href="https://weather-temp-app.cyclic.app"
+      hreflang="x-default"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.1/css/all.min.css" integrity="sha512-9my9Mb2+0YO+I4PUCSwUYO7sEK21Y0STBAiFEYoWtd2VzLEZZ4QARDrZ30hdM1GlioHJ8o8cWQiy8IAb1hy/Hg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
