--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -21,7 +21,7 @@
                 <!-- right side div  -->
                     <div class="col-md-6 col-12 main_header_left">
                         <p>Welcome to AKSARA Technical World</p>
-                        <h1>I am a <span class="weatherText">Mern Stack Developer</span>, Blogger And A Freelancer</h1>
+                        <h1>I am a <span class="weatherText">Software Developer</span>, Blogger And A Freelancer</h1>
                         <a href="https://amulsharma.netlify.app/"><button>About me</button></a>
                     </div>
                 </div>
