--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -21,17 +21,17 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="w-100" src="./img/read.jpg" alt="First slide">
+                                <img class="w-100" src="./img/bg1.png" alt="First slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./img/bg1.png" alt="Second slide">
+                                <img class="w-100" src="./img/bg2.png" alt="Second slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./img/bg2.png" alt="Third slide">
+                                <img class="w-100" src="./img/bg3.png" alt="Third slide">
                               </div>
-                              <div class="carousel-item">
+                              {{!-- <div class="carousel-item">
                                 <img class="w-100" src="./img/bg3.png" alt="Fourth slide">
-                              </div>
+                              </div> --}}
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
