--- a/templates/partials/headerLink.hbs
+++ b/templates/partials/headerLink.hbs
@@ -6,6 +6,7 @@
       name="keywords" 
       content="Weatherapp, Forecast, Download MCA mini project,mini project,Major project,MCA, Download Download MCA Major project, Amul Sharma, weather,git, github project, Project"
     />
+    <meta name="google-site-verification" content="mdXV1o-1MBd-4DfZ2QrmLpl-g6Gnk2cxZEIENbrdLI8" />
      <meta
       name="description"
       content="The weather app also provides atmospheric pressure, weather conditions, visibility distance, relative humidity, precipitation in different unites, dew point, wind speed and direction, in addition to ten days in future and hourly weather forecast."
